# David-OS

./: .fisnote  .gitignore  AI READ.md  CODEX_START_HERE.md  README.md  _PHASE1_FILELIST.txt  _PHASE1_INVENTORY.md  _PHASE2_EXECUTED.json  _PHASE2_MERGE_LOG.jsonl  _PHASE2_PLAN.json  _phase1_hash_audit.py  phase2_merge.py
apps/mcp-hub/: .env.example  README.md  pyproject.toml
apps/mcp-hub/mcp_hub/: __init__.py  app.py  cli.py  config.py  hub.py  mcp_stdio.py  siyuan.py  transport.py
apps/mcp-hub/tests/: test_hub.py
file-intelligence-system/segments/01-core-intelligence-hub/core/: pyproject.toml
file-intelligence-system/segments/01-core-intelligence-hub/core/config/integrations/: integrations.example.json
file-intelligence-system/segments/01-core-intelligence-hub/core/docs/: top-of-mind-api-blueprint.md
file-intelligence-system/segments/01-core-intelligence-hub/core/docs/top-of-mind/: README.md
file-intelligence-system/segments/01-core-intelligence-hub/core/file_intelligence_hub/api/: routes_commands.py  routes_memory.py  routes_top_of_mind.py
file-intelligence-system/segments/01-core-intelligence-hub/core/file_intelligence_hub/config/: folder_profiles.py
file-intelligence-system/segments/01-core-intelligence-hub/core/file_intelligence_hub/intelligence/: __init__.py
file-intelligence-system/segments/01-core-intelligence-hub/core/file_intelligence_hub/rules/: thresholds.py
file-intelligence-system/segments/01-core-intelligence-hub/core/file_intelligence_hub/storage/: db.py  job_repo.py  (+1 more)
file-intelligence-system/segments/01-core-intelligence-hub/core/tests/: test_job_audit.py  test_operator_extensions.py  test_v1_control_plane_extensions.py
(+510 files in other folders)
