[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "david-os-mcp-hub"
version = "0.1.0"
description = "Local read-first MCP and HTTP tool bridge for David OS"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.110", "pydantic>=2", "uvicorn>=0.29"]

[project.scripts]
mcp-hub = "mcp_hub.cli:http_main"
mcp-hub-stdio = "mcp_hub.mcp_stdio:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["mcp_hub*"]
